# DrvLibForMCU

./: README.md
ADS_ADC/ads1118/code/: ads1118.c  ads1118.h
ADS_ADC/ads1256/code/: ads1256.c  ads1256.h
ESP32/LVGL_Button_Test/: README.md  sdkconfig  sdkconfig.old
ESP32/LVGL_Button_Test/main/: CMakeLists.txt  main.c  ui_service.c  weather_http_service.c  weather_http_service.h  weather_https_service.c  weather_https_service.h  wifi_service.c  wifi_service.h
ESP32/leesp/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
ESP32/leesp/components/cus_esp_adc_cal/: Kconfig
ESP32/leesp/components/cus_esp_mqtt/: Kconfig
ESP32/leesp/components/cus_freemodbus/: Kconfig
ESP32/leesp/components/lv_examples/lv_examples/src/lv_ex_widgets/lv_ex_gauge/: lv_ex_gauge_1.c
ESP32/leesp/components/lvgl/: Kconfig
ESP32/leesp/components/lvgl_esp32_drivers/lvgl_tft/: Kconfig
ESP32/leesp/components/lvgl_esp32_drivers/lvgl_touch/: Kconfig  xpt2046.c
ESP32/leesp/main/: CMakeLists.txt  adc_service.c  adc_service.h  boot_logo.c  factory_service.c  factory_service.h  fonts.c  fonts.h  harmonyos_logo.c  kion_logo.c  logo.c  logo1.c  logo2.c  main.c  mbs_service.c  mbs_service.h  modbus_params.c  modbus_params.h  mqtt_service.c  mqtt_service.h  nlogo.c  oled.c  oled.h  ota_service.c  ota_service.h  slogo.c  slogo2.c  sntp_service.c  sntp_service.h  ui_boot_service.c  ui_boot_service.h  ui_service.c  ui_service.h  weather_http_service.c  weather_http_service.h  wifi_service.c  wifi_service.h
ESP32/leesp/main/bak/: esp_ota.c  esp_ota.h  get_weather.c  get_weather.h  wifi_scan.c  wifi_scan.h
JLX_LCD/LCD_JLX128128G/code/: lcd.c
JLX_LCD/LCD_JLX128128G/code/6800/: lcd.h
JLX_LCD/LCD_JLX128128G/code/i2c/: lcd.c  lcd.h
JLX_LCD/LCD_JLX12864/code/: Lcd.c  Lcd.h
ZJY_OLED/12832/OLED/: oled.c  oled.h
ZJY_OLED/12864/OLED/: bmp.h  oled.c  oled.h
qt/mqttdemo/: mainwindow.cpp  mainwindow.h  mainwindow.ui  untitled4.pro
